# bucket-storage

./: .gitignore  Cargo.toml  sqlx-data.json
interface/: package-lock.json  package.json  vite.config.ts
interface/src/: App.svelte
interface/src/lib/: Auth.svelte  Delete.svelte  Download.svelte  Upload.svelte  UploadPublic.svelte  api.ts  stores.ts
migrations/: 20230402115018_init.down.sql  20230402115018_init.up.sql
src/: checksum.rs  errors.rs  lib.rs  main.rs  routes.rs
src/auth/: mod.rs
src/files/: mod.rs
tests/: auth.rs  files.rs  hash.rs  tools.rs
tests/fixtures/: bucket_keys.sql  buckets.sql  files.sql
