[package]
name = "bucket_storage"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
argon2 = "0.5.0"
axum = { version = "0.6.12", features = ["headers", "macros", "multipart"] }
base64 = "0.21.0"
dotenv = "0.15.0"
rand = "0.8.5"
reqwest = { version = "0.11.16", features = ["json"] }
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"
sha1 = "0.10.5"
sqlx = { version = "0.6.3", features = ["postgres", "uuid", "runtime-tokio-rustls", "time"] }
thiserror = "1.0.40"
tokio = { version = "1.27.0", features = ["full"] }
tokio-util = { version = "0.7.7", features = ["codec", "io"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
tracing-test = "0.2.4"
uuid = { version = "1.3.0", features = ["v4", "serde"] }
